fixing based on tests